initExpertTeams